# bioinfo_tools

./: LICENSE  README.md  fasta_generate_regions.py  main.py  pyproject.toml  run.sh  scSplit  setup.sh
