[project]
name = "scsplit"
version = "0.1.0"
description = "Bioinformatic packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pysam>=0.23.3",
    "pyvcf3>=1.0.4",
    "scikit-learn>=1.8.0",
    "statistics>=1.0.3.5",
    "viper-in-python",
]

[tool.uv.sources]
viper-in-python = { git = "https://github.com/alevax/pyviper.git" }
